--- a/accounts/templates/useractions/login.html
+++ b/accounts/templates/useractions/login.html
@@ -40,23 +40,24 @@
                 <div class="col-md-12 col-lg-6">
                     <div class="card">
                         <div class="card-body">
-                            <a href="index.html" class="auth-logo">
+                            <a href="{% url 'crm:crm-dashboard' %}" class="auth-logo">
                                 <img src="/static/assets/images/logo.png" class="img-fluid rounded-normal" alt="logo">
                             </a>
                             <h2 class="mb-2 text-center">Sign In</h2>
                             <p class="text-center">To Keep connected with us please login with your personal info.</p>
-                            <form>
+                            <form method="post">
+                                {% csrf_token %}
                                 <div class="row">
                                     <div class="col-lg-12">
                                         <div class="form-group">
                                             <label class="form-label">Email</label>
-                                            <input class="form-control" type="email" placeholder="admin@example.com">
+                                            <input name="email" class="form-control" type="email" placeholder="admin@example.com">
                                         </div>
                                     </div>
                                     <div class="col-lg-12">
                                         <div class="form-group">
                                             <label class="form-label">Password</label>
-                                            <input class="form-control" type="password" placeholder="********">
+                                            <input class="form-control" type="password" name="password" placeholder="********">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
@@ -69,12 +70,12 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
-                                        <a href="auth-recoverpw.html" class="text-primary float-md-start float-lg-end">Forgot
+                                        <a href="#" class="text-primary float-md-start float-lg-end">Forgot
                                             Password?</a>
                                     </div>
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center flex-wrap">
-                                    <span>Create an Account <a href="auth-sign-up.html"
+                                    <span>Create an Account <a href="#"
                                                                class="text-primary ">Sign Up</a></span>
                                     <button type="submit" class="btn btn-primary" class="text-primary mt-md-0 mt-3">Sign
                                         In
@@ -88,7 +89,7 @@
         </div>
     </section>
 </div>
-    
+
 
 <!-- Library Bundle Script -->
 <script src="{% static 'assets/js/core/libs.min.js' %}"></script>
