--- a/accounts/templates/useractions/registration.html
+++ b/accounts/templates/useractions/registration.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load crispy_forms_tags %}
 <!doctype html>
 <html lang="en">
 
@@ -25,7 +26,17 @@
             rel="stylesheet">
 </head>
 <body class="  ">
+<style>
+    label {
+        margin-bottom: 5px;
+        margin-top: 5px !important;
+    }
 
+    .form-control {
+        max-width: 85% !important;
+        margin-left: 3%;
+    }
+</style>
 <!-- loader Start -->
 <div id="loading">
     <div id="loading-center" style="background: url('/static/assets/images/index.html') no-repeat scroll 50%;">
@@ -43,44 +54,23 @@
                             <a href="{% url 'crm:crm-dashboard' %}" class="auth-logo">
                                 <img src="/static/assets/images/logo.png" class="img-fluid rounded-normal" alt="logo">
                             </a>
-                            <h2 class="mb-2 text-center">Sign In</h2>
+                            <h2 class="mb-2 text-center">Sign Up</h2>
                             <p class="text-center">To Keep connected with us please login with your personal info.</p>
                             <form method="post">
                                 {% csrf_token %}
                                 <div class="row">
-                                    <div class="col-lg-12">
-                                        <div class="form-group">
-                                            <label class="form-label">Email</label>
-                                            <input name="email" class="form-control" type="email"
-                                                   placeholder="admin@example.com">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12">
-                                        <div class="form-group">
-                                            <label class="form-label">Password</label>
-                                            <input class="form-control" type="password" name="password"
-                                                   placeholder="********">
-                                        </div>
-                                    </div>
+                                    {{ form }}
+                                    {{ co_form }}
+
                                     <div class="col-lg-6">
-                                        <div class="form-check mb-3">
-                                            <input class="form-check-input" type="checkbox" value=""
-                                                   id="flexCheckDefault">
-                                            <label class="form-check-label" for="flexCheckDefault">
-                                                Remember Me
-                                            </label>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <a href="#" class="text-primary float-md-start float-lg-end">Forgot
-                                            Password?</a>
+
                                     </div>
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center flex-wrap">
-                                    <span>Create an Account <a href="{% url 'accounts:sign-up' %}"
+                                    <span>Create an Account <a href="#"
                                                                class="text-primary ">Sign Up</a></span>
                                     <button type="submit" class="btn btn-primary" class="text-primary mt-md-0 mt-3">Sign
-                                        In
+                                        Up
                                     </button>
                                 </div>
                             </form>
