--- a/crm/templates/crm/customers/customer-list.html
+++ b/crm/templates/crm/customers/customer-list.html
@@ -206,7 +206,8 @@
                                                                 </svg>
                                                             </a>
                                                             <a class="" data-bs-toggle="tooltip" data-bs-placement="top"
-                                                               title="Edit" href="customer-edit.html">
+                                                               title="Edit"
+                                                               href="{% url 'crm:customer-update' obj.slug %}">
                                                                 <svg xmlns="http://www.w3.org/2000/svg"
                                                                      class="text-secondary mx-4" width="20" fill="none"
                                                                      viewBox="0 0 24 24" stroke="currentColor">
