--- a/crm/templates/base/base.html
+++ b/crm/templates/base/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static i18n %}
 <!doctype html>
 <html lang="en">
 
@@ -77,20 +77,36 @@
                                           d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"/>
                                 </svg>
                             </i>
-                            <span class="ms-2">Customers</span>
+                            <span class="ms-2">{% trans 'Customers' %}</span>
                         </a>
                     </li>
                     <li class=" sidebar-layout">
-                        <a href="product.html" class="svg-icon">
-                            <i class="">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="18" fill="none" viewBox="0 0 24 24"
-                                     stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                          d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z"/>
-                                </svg>
+                        <a href="#app12" class="collapsed svg-icon" data-bs-toggle="collapse" aria-expanded="false">
+                            <i class="fas fa-building">
                             </i>
-                            <span class="ms-2">Product</span>
+                            <span class="ms-2">Companies</span>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="svg-icon iq-arrow-right arrow-active"
+                                 width="15"
+                                 fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
+                            </svg>
                         </a>
+                        <ul id="app12" class="submenu collapse" data-parent="#iq-sidebar-toggle">
+                            <li class=" sidebar-layout">
+                                <a href="{% url 'crm:user-companies' %}" class="svg-icon">
+                                    <i class="fas fa-list">
+
+                                    </i><span class="">Company list</span>
+                                </a>
+                            </li>
+                            <li class=" sidebar-layout">
+                                <a href="{% url 'crm:contacts' %}" class="svg-icon">
+                                    <i class="fas fa-users">
+                                    </i><span class="">Contacts</span>
+                                </a>
+                            </li>
+                        </ul>
+
                     </li>
                     <li class=" sidebar-layout">
                         <a href="order.html" class="svg-icon">
