--- a/crm/templates/crm/usercompany/contacts/contact-list.html
+++ b/crm/templates/crm/usercompany/contacts/contact-list.html
@@ -26,7 +26,7 @@
                                             </a>
                                         </div>
                                     </form>
-                                    <a href="{% url 'crm:company-add' %}"
+                                    <a href="{% url 'crm:contact-add' %}"
                                        class="btn btn-primary position-relative d-flex align-items-center justify-content-between">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="me-2" width="20" fill="none"
                                              viewBox="0 0 24 24" stroke="currentColor">
@@ -137,14 +137,14 @@
 
                                                             <div class="data-content">
                                                                 <div>
-                                                                    <span class="fw-bold">{{ obj.name }}</span>
+                                                                    <span class="fw-bold">{{ obj.get_full_name }}</span>
                                                                 </div>
                                                             </div>
                                                         </div>
                                                     </td>
                                                     <td>{{ obj.user_company }}</td>
                                                     <td>
-                                                       {{ obj.position }}
+                                                        {{ obj.position }}
                                                     </td>
                                                     <td>
                                                         <a href="tel:{{ obj.phone }}">{{ obj.phone }}</a>
@@ -156,23 +156,10 @@
 
                                                     <td>
                                                         <div class="d-flex justify-content-start  align-items-center">
-                                                            <a class="" data-bs-toggle="tooltip" data-bs-placement="top"
-                                                               title="View" href="customer-view.html">
-                                                                <svg xmlns="http://www.w3.org/2000/svg"
-                                                                     class="text-secondary"
-                                                                     width="20" fill="none" viewBox="0 0 24 24"
-                                                                     stroke="currentColor">
-                                                                    <path stroke-linecap="round" stroke-linejoin="round"
-                                                                          stroke-width="2"
-                                                                          d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"/>
-                                                                    <path stroke-linecap="round" stroke-linejoin="round"
-                                                                          stroke-width="2"
-                                                                          d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"/>
-                                                                </svg>
-                                                            </a>
+
                                                             <a class="" data-bs-toggle="tooltip" data-bs-placement="top"
                                                                title="Edit"
-                                                               href="{% url 'crm:company-update' obj.slug %}">
+                                                               href="{% url 'crm:contact-update' obj.slug %}">
                                                                 <svg xmlns="http://www.w3.org/2000/svg"
                                                                      class="text-secondary mx-4" width="20" fill="none"
                                                                      viewBox="0 0 24 24" stroke="currentColor">
