--- a/crm/templates/base/base.html
+++ b/crm/templates/base/base.html
@@ -109,7 +109,7 @@
 
                     </li>
                     <li class=" sidebar-layout">
-                        <a href="order.html" class="svg-icon">
+                        <a href="{% url 'crm:orders' %}" class="svg-icon">
                             <i class="">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="18" fill="none" viewBox="0 0 24 24"
                                      stroke="currentColor">
@@ -117,7 +117,7 @@
                                           d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"/>
                                 </svg>
                             </i>
-                            <span class="ms-2">Order</span>
+                            <span class="ms-2">Orders</span>
                         </a>
                     </li>
                     <li class=" sidebar-layout">
