--- a/crm/templates/base/base.html
+++ b/crm/templates/base/base.html
@@ -18,6 +18,7 @@
     <!-- font-awesome css -->
     <link rel="stylesheet" href="{% static 'assets/vendor/font-awesome/css/all.mine209.css' %}"/>
 
+    <link rel="stylesheet" href="{% static 'assets/css/custom-style.css' %}?{% now "U" %}"/>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
           rel="stylesheet">
     <link
@@ -121,31 +122,14 @@
                         </a>
                     </li>
                     <li class=" sidebar-layout">
-                        <a href="invoice.html" class="svg-icon">
-                            <i class="">
-                                <svg class="icon line" width="18" id="receipt" xmlns="http://www.w3.org/2000/svg"
-                                     viewBox="0 0 24 24" stroke="currentColor">
-                                    <path
-                                            d="M17,16V3L13,5,10,3,7,5,3,3V17.83A3.13,3.13,0,0,0,5.84,21,3,3,0,0,0,9,18V17a1,1,0,0,1,1-1H20a1,1,0,0,1,1,1v1a3,3,0,0,1-3,3H6"
-                                            style="fill: none; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;">
-                                    </path>
-                                    <line x1="8" y1="10" x2="12" y2="10"
-                                          style="fill: none; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;">
-                                    </line>
-                                </svg>
-                            </i>
-                            <span class="ms-2">Invoice</span>
-                        </a>
-                    </li>
-                    <li class=" sidebar-layout">
-                        <a href="app/todo.html" class="svg-icon">
+                        <a href="{% url 'crm:tasks' %}" class="svg-icon">
                             <i class="">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="18" fill="none" viewBox="0 0 24 24"
                                      stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                           d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-6 9l2 2 4-4"/>
                                 </svg>
-                            </i><span class="ms-2">Todo</span>
+                            </i><span class="ms-2">Tasks</span>
                         </a>
                     </li>
                     <li class=" sidebar-layout">
