--- a/crm/templates/base/base.html
+++ b/crm/templates/base/base.html
@@ -149,6 +149,28 @@
                     <li class="px-3 pt-3 pb-2">
                         <span class="text-uppercase small fw-bold">Pages</span>
                     </li>
+                    <li class="sidebar-layout">
+                        <a href="#app1" class="collapsed svg-icon" data-bs-toggle="collapse" aria-expanded="false">
+                            <i class="fas fa-edit">
+
+                            </i>
+                            <span class="ms-2">Settings</span>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="svg-icon iq-arrow-right arrow-active"
+                                 width="15"
+                                 fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
+                            </svg>
+                        </a>
+                        <ul id="app1" class="submenu collapse" data-parent="#iq-sidebar-toggle">
+                            <li class=" sidebar-layout">
+                                <a href="{% url 'crm:company-profile' %}" class="svg-icon">
+                                    <i class="fas fa-building">
+
+                                    </i><span class="">Company profile</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
                     <li class=" sidebar-layout">
                         <a href="app/chat.html" class="svg-icon">
                             <i class="">
@@ -171,6 +193,8 @@
                             </i><span class="ms-2">User Profile</span>
                         </a>
                     </li>
+
+
                     <li class="sidebar-layout">
                         <a href="#app1" class="collapsed svg-icon" data-bs-toggle="collapse" aria-expanded="false">
                             <i>
