--- a/crm/templates/crm/calendar/calendar-list.html
+++ b/crm/templates/crm/calendar/calendar-list.html
@@ -16,7 +16,7 @@
                 <div class="col-lg-12">
                     <div class="d-flex flex-wrap align-items-center justify-content-between my-schedule mb-4">
                         <div class="d-flex align-items-center justify-content-between mb-md-0 mb-2">
-                            <h4>Set Your Weekly Hours</h4>
+                            <h4>My Calendar</h4>
                         </div>
                         <div class="create-workform">
                             <button type="button"
