add: notification, task add, task edit

--- a/crm/templates/crm/calendar/calendar-list.html
+++ b/crm/templates/crm/calendar/calendar-list.html
@@ -8,10 +8,10 @@
     <link href="{% static 'assets/css/custom-calendar.css' %}" rel="stylesheet">
 
     <style>
-        /* Bugünkü günü mavi kenarlıklı yap */
+
         .fc-day-today {
             border: 2px solid #3292e4 !important;
-            background-color: transparent !important; /* Sarı arka planı kaldır */
+            background-color: transparent !important;
         }
     </style>
 {% endblock %}
