--- a/crm/templates/crm/task/include/task-cards.html
+++ b/crm/templates/crm/task/include/task-cards.html
@@ -111,7 +111,7 @@
                                             </a>
                                             <div class="dropdown-menu dropdown-menu-end"
                                                  aria-labelledby="dropdownMenuButton-1">
-                                                <a class="dropdown-item" href="#">
+                                                <a class="dropdown-item" href="{% url 'crm:task-update' obj.slug %}">
                                                     <svg class="svg-icon text-primary" width="20"
                                                          xmlns="http://www.w3.org/2000/svg"
                                                          fill="none" viewBox="0 0 24 24"
@@ -272,7 +272,7 @@
                                             </a>
                                             <div class="dropdown-menu dropdown-menu-end"
                                                  aria-labelledby="dropdownMenuButton-1">
-                                                <a class="dropdown-item" href="#">
+                                                <a class="dropdown-item" href="{% url 'crm:task-update' obj.slug %}">
                                                     <svg class="svg-icon text-primary" width="20"
                                                          xmlns="http://www.w3.org/2000/svg"
                                                          fill="none" viewBox="0 0 24 24"
@@ -431,7 +431,7 @@
                                             </a>
                                             <div class="dropdown-menu dropdown-menu-end"
                                                  aria-labelledby="dropdownMenuButton-1">
-                                                <a class="dropdown-item" href="#">
+                                                <a class="dropdown-item" href="{% url 'crm:task-update' obj.slug %}">
                                                     <svg class="svg-icon text-primary" width="20"
                                                          xmlns="http://www.w3.org/2000/svg"
                                                          fill="none" viewBox="0 0 24 24"
@@ -590,7 +590,7 @@
                                             </a>
                                             <div class="dropdown-menu dropdown-menu-end"
                                                  aria-labelledby="dropdownMenuButton-1">
-                                                <a class="dropdown-item" href="#">
+                                                <a class="dropdown-item" href="{% url 'crm:task-update' obj.slug %}">
                                                     <svg class="svg-icon text-primary" width="20"
                                                          xmlns="http://www.w3.org/2000/svg"
                                                          fill="none" viewBox="0 0 24 24"
