--- a/crm/templates/crm/task/include/task-list.html
+++ b/crm/templates/crm/task/include/task-list.html
@@ -101,7 +101,7 @@
                                     </svg>
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton-1">
-                                    <a class="dropdown-item" href="#">
+                                    <a class="dropdown-item" href="{% url 'crm:task-update' obj.slug %}">
                                         <svg class="svg-icon text-primary" width="20"
                                              xmlns="http://www.w3.org/2000/svg" fill="none"
                                              viewBox="0 0 24 24" stroke="currentColor">
@@ -241,7 +241,7 @@
                                     </svg>
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton-1">
-                                    <a class="dropdown-item" href="#">
+                                    <a class="dropdown-item" href="{% url 'crm:task-update' obj.slug %}">
                                         <svg class="svg-icon text-primary" width="20"
                                              xmlns="http://www.w3.org/2000/svg" fill="none"
                                              viewBox="0 0 24 24" stroke="currentColor">
@@ -380,7 +380,7 @@
                                     </svg>
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton-1">
-                                    <a class="dropdown-item" href="#">
+                                    <a class="dropdown-item" href="{% url 'crm:task-update' obj.slug %}">
                                         <svg class="svg-icon text-primary" width="20"
                                              xmlns="http://www.w3.org/2000/svg" fill="none"
                                              viewBox="0 0 24 24" stroke="currentColor">
@@ -519,7 +519,7 @@
                                     </svg>
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton-1">
-                                    <a class="dropdown-item" href="#">
+                                    <a class="dropdown-item" href="{% url 'crm:task-update' obj.slug %}">
                                         <svg class="svg-icon text-primary" width="20"
                                              xmlns="http://www.w3.org/2000/svg" fill="none"
                                              viewBox="0 0 24 24" stroke="currentColor">
