--- a/static/assets/css/custom-style.css
+++ b/static/assets/css/custom-style.css
@@ -6,6 +6,15 @@
     color: white;
 }
 
+span.bg-danger-subtle.notification_count {
+    background: transparent !important;
+    color: red;
+    font-size: 15px;
+    position: relative;
+    left: -15px;
+    top: -10px;
+}
+
 .task-status {
     max-width: max-content;
     padding-left: 5px;
